package edu.hitsz.bullet;

import edu.hitsz.application.Main;
import edu.hitsz.basic.AbstractFlyingObject;
import edu.hitsz.prop.BombEffectContext;
import edu.hitsz.prop.FreezeEffectContext;
import edu.hitsz.prop.PropObserver;

/**
 * 子弹基类
 * 
 * @author hitsz
 */
public abstract class BaseBullet extends AbstractFlyingObject implements PropObserver {

    private int power = 0;
    private boolean frozenBySupply = false;

    public BaseBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY);
        this.power = power;
    }

    @Override
    public void forward() {
        super.forward();

        // 判定 x 轴出界
        if (locationX <= 0 || locationX >= Main.WINDOW_WIDTH) {
            vanish();
        }

        // 判定 y 轴出界
        if (speedY > 0 && locationY >= Main.WINDOW_HEIGHT) {
            // 向下飞行出界
            vanish();
        } else if (locationY <= 0) {
            // 向上飞行出界
            vanish();
        }
    }

    public int getPower() {
        return power;
    }

    public boolean isFrozenBySupply() {
        return frozenBySupply;
    }

    @Override
    public boolean isTemporarySpeedLocked() {
        return frozenBySupply;
    }

    @Override
    public void onBomb(BombEffectContext context) {
        vanish();
    }

    @Override
    public void onFreeze(FreezeEffectContext context) {
        frozenBySupply = true;
        context.freezeTemporarily(this, context.getBulletFreezeMillis(), () -> frozenBySupply = false);
    }
}
